--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@capacitor/ios": "7.0.1",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
-    "@ionic/angular": "^8.0.0",
+    "@ionic/angular": "^8.4.3",
+    "angularx-qrcode": "^19.0.0",
     "cordova-res": "^0.15.4",
+    "install": "^0.13.0",
     "ionicons": "^7.0.0",
     "native-run": "^2.0.1",
     "rxjs": "~7.8.0",
